--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,18 @@ foo: bar
 config:
   name: cjdname
   
+instructors:
+  instructor:
+    name: "Chris Decelles"
+    title: "Sr. Platform Architect"
+    email: "cdeelles@pivotal.io"
+    phone: "603.512.5616"
+  instructor:
+    name: "Mark Fynes"
+    title: "Advisory Platform Architect"
+    email: "mark@pivotal.io"
+    phone: "617.333.3333"
+  
 fortune:
   messages:
     - "People are naturally attracted to you."
