--- a/application.yml
+++ b/application.yml
@@ -4,12 +4,12 @@ config:
   name: cjdname
   
 instructors:
-  instructor:
+  instructor1:
     name: "Chris Decelles"
     title: "Sr. Platform Architect"
     email: "cdeelles@pivotal.io"
     phone: "603.512.5616"
-  instructor:
+  instructor2:
     name: "Mark Fynes"
     title: "Advisory Platform Architect"
     email: "mark@pivotal.io"
