--- a/application.yml
+++ b/application.yml
@@ -16,7 +16,7 @@ customerLogo: "https://workplace.fidelity.com/sites/default/files/fidelity_wps_l
 testers: 
   instructors: 
     - 
-      name: "Chris Decelles"
+      name: "Chris Joseph Decelles"
       title: "Sr. Platform Architect"
       email: cdeelles@pivotal.io
       phone: "603.512.5616"
