--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ courseDate: "March 17 - 18, 2016"
 courseDescription: "This workshop will cover the ..."
 
 customerLogo: "https://workplace.fidelity.com/sites/default/files/fidelity_wps_logo.png"
-testers: 
+workshop: 
   instructors: 
     - 
       name: "Chris Joseph Decelles"
