--- a/application.yml
+++ b/application.yml
@@ -46,4 +46,30 @@ material:
       topicID: "06-lab-org-space-user-role"
       timeDescription: "11:30 - 1:00"
 
+Sessions: 
+  day1: 
+    title: "Spring Boot or Session 1 8:00 - 9:30am"
+    - 
+      topicID: "00-introduction"
+      timeDescription: "9:30 - 11:30"
+    - 
+      topicID: "02-intro-to-pcf"
+      timeDescription: "1:00 - 5:00"
+      title: "CJD's PCF Overview"
+    title: "Session 2 or 10:00 - 11:00"
+    - 
+      topicID: "00-introduction"
+      timeDescription: "9:30 - 11:30"
 
+    - 
+      topicID: "02-intro-to-pcf"
+      timeDescription: "1:00 - 5:00"
+
+  day2: 
+    - 
+      topicID: "04-cli"
+      timeDescription: "8:30 - 11:00"
+
+    - 
+      topicID: "06-lab-org-space-user-role"
+      timeDescription: "11:30 - 1:00"
