--- a/application.yml
+++ b/application.yml
@@ -50,7 +50,7 @@ content:
   sessions:
     - 
       id: "Day 1"
-      name: "Welcome to Day 1"
+      description: "Welcome to Day 1"
     - 
       id: "Day 2"
-      name: "Welcome to Day 2"
+      description: "Welcome to Day 2"
