--- a/application.yml
+++ b/application.yml
@@ -51,6 +51,14 @@ content:
     - 
       id: "Day 1"
       description: "Welcome to Day 1"
+      -
+        title: "tiel1"
+        description: "tieldesc"
+        slideURL: "slide url1"
+      -
+        title: "tiel2"
+        description: "tieldesc2"
+        slideURL: "slide ur2l"
     - 
       id: "Day 2"
       description: "Welcome to Day 2"
