--- a/application.yml
+++ b/application.yml
@@ -51,6 +51,7 @@ content:
     - 
       id: "Day 1"
       description: "Welcome to Day 1"
+      topics:
       -
         title: "tiel1"
         description: "tieldesc"
@@ -62,3 +63,12 @@ content:
     - 
       id: "Day 2"
       description: "Welcome to Day 2"
+      topics:
+      -
+        title: "tiel1"
+        description: "tieldesc"
+        slideURL: "slide url1"
+      -
+        title: "tiel2"
+        description: "tieldesc2"
+        slideURL: "slide ur2l"
