--- a/application.yml
+++ b/application.yml
@@ -9,9 +9,9 @@ fortune:
 hello: world
 
 workshop: 
-  courseTitle: "Pivotal Cloud Foundry Workshop"
-  courseDate: "March 17 - 18, 2016"
-  courseDescription: "This workshop will cover the ..."
+  title: "Pivotal Cloud Foundry Workshop"
+  date: "March 17 - 18, 2016"
+  description: "This workshop will cover the ..."
   customerLogo: "https://workplace.fidelity.com/sites/default/files/fidelity_wps_logo.png"
   instructors: 
     - 
