--- a/application.yml
+++ b/application.yml
@@ -70,7 +70,25 @@ workshop:
       -
         id: "02-intro-to-pcf"
       -
+        id: "04-lab-cli"
+      -
+        id: "06-org-space-user-role"
+      -
+        id: "08-deploy-simple-app"
+      -
+        id: "10-application-manifest"
+      -
+        id: "14-services"
+      -
+        id: "68-cloud-native-design"
+      -
+        id: "70-microservices"
+      -
         id: "80-cs-spring-boot-basics"
+      -
+        id: "08-deploy-simple-app"
+      -
+        id: "10-application-manifest"
     - 
       id: "day2"
       name: "Day 2"
