--- a/application.yml
+++ b/application.yml
@@ -77,7 +77,7 @@ workshop:
         id: "14-services"
       -
         id: "micro"
-        title: "<font size="3" color="red">Microservices</font>"
+        title: "<font size=\"3\" color=\"red\">Microservices</font>"
       -
         id: "68-cloud-native-design"
       -
