--- a/application.yml
+++ b/application.yml
@@ -108,6 +108,13 @@ workshop:
       -
         id: "day1pmbreak"
         title: "Break 3:30 PM - 3:45 PM"
+      -
+        id: "day1open"
+        title: "Open Discussion: 3:45 PM - 5:00 PM"
+      -
+        id: "day1open1"
+        title: "COTS"
+        slideURL: "COTS.pd"
     - 
       id: "day2"
       name: "Day 2"
