--- a/application.yml
+++ b/application.yml
@@ -69,8 +69,7 @@ workshop:
         id: "session1"
         title: "Session 1: 9:00 AM - 9:45 AM"
       -
-        id: "02-intro-to-pcf"
-        title: "Welcome to the Cloud Native Enterprise"
+        id: "session1-cne"
       -
         id: "session1lab"
         title: "Demo: 9:45 AM - 10:15 AM"
@@ -84,7 +83,7 @@ workshop:
         id: "session2"
         title: "Session 2: 10:30 AM - 12:00 PM"
       -
-        id: "06-org-space-user-role"
+        id: "session2-arch-oper"
         title: "Pivotal Cloud Foundry Architecture and Containers"
       -
         id: "08-deploy-simple-app"
@@ -96,7 +95,7 @@ workshop:
         id: "session3"
         title: "Session 3: 1:00 PM - 1:30 PM"
       -
-        id: "10-application-manifest"
+        id: "session3-services"
         title: "Pivotal Cloud Foundry Services"
       -
         id: "day1labs"
