--- a/application.yml
+++ b/application.yml
@@ -101,8 +101,15 @@ workshop:
         id: "day1labs"
         title: "Labs: 1:30 PM - 3:30 PM"
       -
-        id: "14-services"
-        title: "Push, Scale, Bind and Monitor your app"
+        id: "pcf101-lab1"
+      -
+        id: "pcf101-lab2"
+      -
+        id: "pcf101-lab3"
+      -
+        id: "pcf101-lab4"
+      -
+        id: "pcf101-lab5"
       -
         id: "day1pmbreak"
         title: "Break 3:30 PM - 3:45 PM"
