--- a/application.yml
+++ b/application.yml
@@ -83,7 +83,7 @@ workshop:
         id: "session2"
         title: "Session 2: 10:30 AM - 12:00 PM"
       -
-        id: "pcf101-session2-arc"
+        id: "pcf101-session2-arch"
       -
         id: "pcf101-session2a-oper"
       -
