--- a/application.yml
+++ b/application.yml
@@ -19,7 +19,7 @@ workshop:
       email: cdecelles@pivotal.io
       phone: "603.512.5616"
     - 
-      name: "Ravi Jagannathan"
+      name: "Ravi J."
       title: "Platform Architect"
       email: rjagannathan@pivotal.io
   resources:
