--- a/application.yml
+++ b/application.yml
@@ -11,7 +11,7 @@ hello: world
 workshop: 
   contentURL: "https://workshop-content.cfapps.io"
   title: "Pivotal Cloud Foundry Workshop"
-  date: "August 16, 2016"
+  date: "October 25 & 26, 2016"
   description: "This workshop will cover the ..."
   customerLogo: "http://www.johnhancock.com/resources/images/common/john-hancock-logo.gif"
   instructors: 
