--- a/application.yml
+++ b/application.yml
@@ -76,6 +76,29 @@ workshop:
         id: "10-application-manifest"
       -
         id: "12-domains-and-routes"
+      -
+        id: "12-domains-and-routes"
+      -
+        id: "14-services"
+      -
+        id: "20a-opsmgr-and-bosh-short"
+      -
+        id: "26-elastic-runtime"
+      -
+        id: "40-high-availability"
+      -
+        id: "session1"
+        title: "Customization"
+      -
+        id: "04-cli"
+      -
+        id: "08-deploy-simple-app"
+      -
+        id: "06-org-space-user-role"
+      -
+        id: "10-application-manifest"
+      -
+        id: "12-domains-and-routes"
     - 
       id: "day2"
       name: "Day 2"
