--- a/application.yml
+++ b/application.yml
@@ -90,15 +90,15 @@ workshop:
         id: "session1"
         title: "Customization"
       -
-        id: "04-cli"
+        id: "56-cloud-controller-API"
       -
-        id: "08-deploy-simple-app"
+        id: "58-service-broker"
       -
-        id: "06-org-space-user-role"
+        id: "59-oauth-primer"
       -
-        id: "10-application-manifest"
+        id: "60-security-and-sso"
       -
-        id: "12-domains-and-routes"
+        id: "62-buildpacks"
     - 
       id: "day2"
       name: "Day 2"
